--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "author": "Julien Elbaz",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "debug": "^4.1.1",
     "express": "^4.16.4",
     "long": "^4.0.0",
+    "mdns": "^2.4.0",
     "node-fetch": "^2.3.0",
     "protobufjs": "^6.8.8",
     "shannon-bindings": "^0.1.0",
